force-app/main/default/objects/Automated_Deployment__c/Automated_Deployment__c.object-meta.xml
<CustomObject>
    <description>To capture the information so we can automate the uploaded data for NOL.</description>
    <label>NOL</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NOLS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>
<?xml version="1.0" encoding="UTF-8"?>
<CustomObject>
    <description>To capture the information so we can automate the uploaded data for NOL.</description>
    <label>Automated New Offer</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Automated New Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>