force-app/main/default/objects/Automated_Deployment__c/fields/ACV_Cate__c.field-meta.xml
<CustomField>
    <fullName>ACV_Cate__c</fullName>
    <label>ACV Categorization(Del)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>People Management ACV</fullName>
            </value>
            <value>
                <fullName>Core Financials ACV</fullName>
            </value>
            <value>
                <fullName>Financials Plus ACV</fullName>
            </value>
            <value>
                <fullName>Success Plan ACV</fullName>
            </value>
            <value>
                <fullName>Uncategorized ACV</fullName>
            </value>
            <value>
                <fullName>Sourcing ACV</fullName>
            </value>
            <value>
                <fullName>Planning ACV</fullName>
            </value>
            <value>
                <fullName>Peakon ACV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>