force-app/main/default/objects/Automated_Deployment__c/fields/ACV_Floor_USD__c.field-meta.xml
<CustomField>
    <fullName>ACV_Floor_USD__c</fullName>
    <label>ACV Floor (USD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>