force-app/main/default/objects/Automated_Deployment__c/fields/Applicable_Industries__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Industries__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicable Industries</label>
    <referenceTo>DMAPP__Insight_Industry__c</referenceTo>
    <relationshipName>Automated_Deployments</relationshipName>
    <type>Lookup</type>
</CustomField>