force-app/main/default/objects/Automated_Deployment__c/fields/Apttus_Catalog_Group_Header__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Catalog_Group_Header__c</fullName>
    <label>Apttus Catalog Group Header</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Committed Usage Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>