force-app/main/default/objects/Automated_Deployment__c/fields/Apttus_Catalog_Header__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Catalog_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Displays product under this section in catalog. It takes precedence over Option group name field.</inlineHelpText>
    <label>Apttus Catalog Header</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Apttus_Config2__ClassificationHierarchy__c.Apttus_Config2__ProductCount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
    <relationshipLabel>Automated New Offers</relationshipLabel>
    <relationshipName>Automated_New_Offers</relationshipName>
    <type>Lookup</type>
</CustomField>