force-app/main/default/objects/Automated_Deployment__c/fields/Bundle_Rule_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Rule_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bundle Rule Applicable</label>
    <type>Checkbox</type>
</CustomField>