force-app/main/default/objects/Automated_Deployment__c/fields/CategoryHierarchy__c.field-meta.xml
<CustomField>
    <fullName>CategoryHierarchy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category Hierarchy</label>
    <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
    <relationshipLabel>Automated New Offers</relationshipLabel>
    <relationshipName>Automated_New_Offers</relationshipName>
    <type>Lookup</type>
</CustomField>