force-app/main/default/objects/Automated_Deployment__c/fields/Customer_360_Heatmap_Record__c.field-meta.xml
<CustomField>
    <fullName>Customer_360_Heatmap_Record__c</fullName>
    <label>Customer 360 Heatmap Record</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>