force-app/main/default/objects/Automated_Deployment__c/fields/GA_Date__c.field-meta.xml
<CustomField>
    <fullName>GA_Date__c</fullName>
    <label>GA Date</label>
    <type>Date</type>
</CustomField>