force-app/main/default/objects/Automated_Deployment__c/fields/Include_in_Analytics_ACV__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Analytics_ACV__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Include in Analytics ACV</description>
    <inlineHelpText>Include in Analytics ACV</inlineHelpText>
    <label>Include in Analytics ACV</label>
    <type>Checkbox</type>
</CustomField>