force-app/main/default/objects/Automated_Deployment__c/fields/Include_in_Core_Fins_ACV__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Core_Fins_ACV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Core Fins ACV</label>
    <type>Checkbox</type>
</CustomField>