force-app/main/default/objects/Automated_Deployment__c/fields/Include_in_Uncategorized_ACV__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Uncategorized_ACV__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Include in Uncategorized ACV</inlineHelpText>
    <label>Include in Uncategorized ACV</label>
    <type>Checkbox</type>
</CustomField>