force-app/main/default/objects/Automated_Deployment__c/fields/Industry_Uplift__c.field-meta.xml
<CustomField>
    <fullName>Industry_Uplift__c</fullName>
    <label>Industry Uplift %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>
<?xml version="1.0" encoding="UTF-8"?>
<CustomField>
    <fullName>Industry_Uplift__c</fullName>
    <label>Industry Uplift %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>