force-app/main/default/objects/Automated_Deployment__c/fields/Industry_Uplift_Level__c.field-meta.xml
<CustomField>
    <fullName>Industry_Uplift_Level__c</fullName>
    <label>Industry Uplift Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Super Industry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>