force-app/main/default/objects/Automated_Deployment__c/fields/Industry_Uplifts__c.field-meta.xml
<CustomField>
    <fullName>Industry_Uplifts__c</fullName>
    <label>Industry Uplifts</label>
    <length>20</length>
    <type>Text</type>
</CustomField>