force-app/main/default/objects/Automated_Deployment__c/fields/ISA_Identifier__c.field-meta.xml
<CustomField>
    <fullName>ISA_Identifier__c</fullName>
    <label>ISA Identifier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>