force-app/main/default/objects/Automated_Deployment__c/fields/LDP_Tool_Applicable__c.field-meta.xml
<CustomField>
    <fullName>LDP_Tool_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LDP Tool Applicable(D)</label>
    <type>Checkbox</type>
</CustomField>