force-app/main/default/objects/Automated_Deployment__c/fields/Max_PEPY__c.field-meta.xml
<CustomField>
    <fullName>Max_PEPY__c</fullName>
    <label>Max PEPY</label>
    <length>20</length>
    <type>Text</type>
</CustomField>