force-app/main/default/objects/Automated_Deployment__c/fields/Metric_Definition__c.field-meta.xml
<CustomField>
    <fullName>Metric_Definition__c</fullName>
    <label>Metric Definition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>