force-app/main/default/objects/Automated_Deployment__c/fields/Metric_Name__c.field-meta.xml
<CustomField>
    <fullName>Metric_Name__c</fullName>
    <label>Metric Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>