force-app/main/default/objects/Automated_Deployment__c/fields/Option_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Option_Group_Name__c</fullName>
    <inlineHelpText>Creates a new option group.</inlineHelpText>
    <label>Option Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>