force-app/main/default/objects/Automated_Deployment__c/fields/Price_List_Currency_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Price_List_Currency_Conversion__c</fullName>
    <label>Price List Currency Conversion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>