force-app/main/default/objects/Automated_Deployment__c/fields/Price_Lists__c.field-meta.xml
<CustomField>
    <fullName>Price_Lists__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Lists</label>
    <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
    <relationshipName>Automated_Deployments</relationshipName>
    <type>Lookup</type>
</CustomField>