force-app/main/default/objects/Automated_Deployment__c/fields/Price_Ruleset__c.field-meta.xml
<CustomField>
    <fullName>Price_Ruleset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Rule Set</label>
    <referenceTo>Apttus_Config2__PriceRuleset__c</referenceTo>
    <relationshipName>Automated_Deployments</relationshipName>
    <type>Lookup</type>
</CustomField>