force-app/main/default/objects/Automated_Deployment__c/fields/Pricing_Model__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Model__c</fullName>
    <label>Pricing Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FSE</fullName>
            </value>
            <value>
                <fullName>Committed Usage</fullName>
            </value>
            <value>
                <fullName>Users</fullName>
            </value>
            <value>
                <fullName>% of ACV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>