force-app/main/default/objects/Automated_Deployment__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Training Credits</fullName>
            </value>
            <value>
                <fullName>ODE</fullName>
            </value>
            <value>
                <fullName>WAT</fullName>
            </value>
            <value>
                <fullName>Delivery Assurance</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>Deployment Tenant</fullName>
            </value>
            <value>
                <fullName>PPT</fullName>
            </value>
            <value>
                <fullName>Deployement Strategy Services</fullName>
            </value>
            <value>
                <fullName>Instance</fullName>
            </value>
            <value>
                <fullName>Advisory Services</fullName>
            </value>
            <value>
                <fullName>Launch Training Package</fullName>
            </value>
            <value>
                <fullName>Customer Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>