force-app/main/default/objects/Automated_Deployment__c/fields/Product_Guidance__c.field-meta.xml
<CustomField>
    <fullName>Product_Guidance__c</fullName>
    <label>Product Guidance</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>