force-app/main/default/objects/Automated_Deployment__c/fields/Product_Qualification_Setup__c.field-meta.xml
<CustomField>
    <fullName>Product_Qualification_Setup__c</fullName>
    <label>Product Qualification Setup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>