force-app/main/default/objects/Automated_Deployment__c/fields/Product_Qualifications__c.field-meta.xml
<CustomField>
    <fullName>Product_Qualifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Qualifications</label>
    <type>Checkbox</type>
</CustomField>