force-app/main/default/objects/Automated_Deployment__c/fields/Promo_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Promo_Adjustment__c</fullName>
    <label>Promo Adjustment %</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>50%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>