force-app/main/default/objects/Automated_Deployment__c/fields/Promo_Pricing_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Promo_Pricing_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Promo Pricing Applicable</label>
    <type>Checkbox</type>
</CustomField>