force-app/main/default/objects/Automated_Deployment__c/fields/Promo_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Promo_Start_Date__c</fullName>
    <label>Promo Start Date</label>
    <type>Date</type>
</CustomField>