force-app/main/default/objects/Automated_Deployment__c/fields/RollBackIds__c.field-meta.xml
<CustomField>
    <fullName>RollBackIds__c</fullName>
    <description>Stores all the IDs which are inserted in the System for all CPQ object</description>
    <label>Roll Back Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>