force-app/main/default/objects/Automated_Deployment__c/fields/SKU_Classification_Code__c.field-meta.xml
<CustomField>
    <fullName>SKU_Classification_Code__c</fullName>
    <label>SKU Classification Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>