force-app/main/default/objects/Automated_Deployment__c/fields/SKU_Code__c.field-meta.xml
<CustomField>
    <fullName>SKU_Code__c</fullName>
    <formula>Product__r.External_SKU_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SKU Code</label>
    <type>Text</type>
</CustomField>