force-app/main/default/objects/Automated_Deployment__c/fields/SKU_Description__c.field-meta.xml
<CustomField>
    <fullName>SKU_Description__c</fullName>
    <label>SKU Description</label>
    <type>TextArea</type>
</CustomField>