force-app/main/default/objects/Automated_Deployment__c/fields/SKU_Name__c.field-meta.xml
<CustomField>
    <fullName>SKU_Name__c</fullName>
    <formula>Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SKU Name</label>
    <type>Text</type>
</CustomField>