force-app/main/default/objects/Automated_Deployment__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request Created</fullName>
            </value>
            <value>
                <fullName>Product Manager Approved</fullName>
            </value>
            <value>
                <fullName>Pricing &amp; Packaging Finalized</fullName>
            </value>
            <value>
                <fullName>Order form Finalized</fullName>
            </value>
            <value>
                <fullName>Quoting Set Up Complete</fullName>
            </value>
            <value>
                <fullName>Deployment Scorecard Setup</fullName>
            </value>
            <value>
                <fullName>WoW Integration Ready</fullName>
            </value>
            <value>
                <fullName>Change Approved</fullName>
            </value>
            <value>
                <fullName>Pricing Change Deployed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>