force-app/main/default/objects/Automated_Deployment__c/fields/Unit_of_Measure_UoM__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure_UoM__c</fullName>
    <label>Unit of Measure (UoM)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seats</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>