force-app/main/default/objects/Automated_Deployment__c/fields/Upgrade_fee_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Upgrade_fee_Multiplier__c</fullName>
    <label>Upgrade fee Multiplier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>