force-app/main/default/objects/Automated_Deployment__c/fields/Uplift_Align_with_SRSV__c.field-meta.xml
<CustomField>
    <fullName>Uplift_Align_with_SRSV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uplift Align with SRSV</label>
    <type>Checkbox</type>
</CustomField>