force-app/main/default/objects/Automated_Deployment__c/fields/Volume_Tiers__c.field-meta.xml
<CustomField>
    <fullName>Volume_Tiers__c</fullName>
    <label>Volume Tiers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unlimited</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>