force-app/main/default/objects/Automated_Deployment__c/fields/Workday_Services_Set_Up__c.field-meta.xml
<CustomField>
    <fullName>Workday_Services_Set_Up__c</fullName>
    <label>Workday Services Set-Up</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>